--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <video src="ink.mp4" autoplay muted loop></video>
         <h1>DON’T KNOW WHY YOU HAVE NO MOOD FOR STUDYING?</h1>
         <h3>Take a quiz and find out your problem</h3>
-        <a href="../quiz/index.html" class="boxBtn">QUIZ</a>
+        <a href="quiz/index.html" class="boxBtn">QUIZ</a>
     </section>
 
 
